Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33333

Wrong behaviour calling qmake on Windows with qt.conf

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.2.0 Beta1
    • 5.1.0
    • Build tools: qmake
    • None
    • Windows 7, qt compiled with mingw
    • 6a41fa832e76b489adef9b26ee5cc7f9a83953cc

    Description

      On Windows, with a qt.conf calling "qmake -query" give the expected behaviour while calling "qmake.exe -query" return the builtin paths.
      I fixed this issue replacing code near line 350 of qmake/option.cpp:

      #ifdef Q_OS_WIN
      candidate += ".exe";
      #else

      WITH:

      #ifdef Q_OS_WIN
      if (!candidate.endsWith(".exe"))
      candidate += ".exe";
      #endif

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            paolo.volpi Paolo Volpi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes